2014-04-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/aggcat.spad.pamphlet,
	src/algebra/tree.spad.pamphlet,
	src/algebra/naalg.spad.pamphlet,
	src/algebra/intpm.spad.pamphlet,
	src/algebra/string.spad.pamphlet,
	src/algebra/fr.spad.pamphlet,
	src/algebra/efstruc.spad.pamphlet,
	src/algebra/mts.spad.pamphlet: De-hunkify.

2014-04-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/scene.spad.pamphlet,
	src/doc/htex/ug15.htex, src/doc/htex/ug08.htex,
	src/doc/htex/ARRAY1.htex, src/doc/ht/graphics.ht:
	Fix examples.

2014-04-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/hyper/spadint.c: Fix buffer overflow.

2014-04-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: Allow specifing return type
	for nulary anonymous functions.

2014-04-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mantepse.spad.pamphlet: De-hunkify.

2014-03-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: Let overload resolution make
	choice between variables and literals.
	src/algebra/scene.spad.pamphlet,
	src/algebra/tree.spad.pamphlet,
	src/algebra/pattern.spad.pamphlet,
	src/algebra/integer.spad.pamphlet,
	src/algebra/view3D.spad.pamphlet,
	src/algebra/view2D.spad.pamphlet,
	src/algebra/graph.spad.pamphlet: Adjust.

2014-03-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/outform.spad.pamphlet: Remove useless exports.

2014-03-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/int-top.boot: Fix 'ncloopEscaped'.

2014-03-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rep2.spad.pamphlet,
	src/algebra/groebf.spad.pamphlet: Stop using 'autoCoerce'
	in algebra.

2014-03-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: Prefer String as argument
	type of 'error', report type errors when compiling
	to OutputForm.
	src/algebra/color.spad.pamphlet,
	src/algebra/outform.spad.pamphlet,
	src/algebra/fortran.spad.pamphlet,