@@ -460,7 +460,7 @@ region with background color (default: 1, or white).
 <<header>>=
 %!PS-Adobe-2.0
 %%DocumentFonts: Times-Roman
-%%Creator: AXIOM
+%%Creator: FriCAS
 %%CreationDate: today
 %%Pages: 1
 %%processing (hard) limit: 250 pts or 500 values for the operand stack.
