@@ -1,5 +1,12 @@
 2014-04-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/hyper/initx.c, src/graph/view2D/write2d.c,
+	src/graph/view2D/main2d.c, src/graph/view3D/process3d.c,
+	src/graph/view3D/main3d.c, src/graph/view3D/write3d.c,
+	src/graph/Gdraws/psFiles.pamphlet: s/Axiom/FriCAS/
+
+2014-04-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/aggcat.spad.pamphlet,
 	src/algebra/tree.spad.pamphlet,
 	src/algebra/naalg.spad.pamphlet,
